--- a/AlphabetSoupCharityOptimization_Method_4_Compile_SGD.ipynb
+++ b/AlphabetSoupCharityOptimization_Method_4_Compile_SGD.ipynb
@@ -11,14 +11,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 496
+          "height": 337
         },
         "id": "9cMQHbGHdoF_",
-        "outputId": "a2810bfa-5aac-47de-c193-628a1e568314"
+        "outputId": "00d0c8aa-3067-415a-e0fe-3ffb71f9ffd8"
       },
       "outputs": [
         {
@@ -48,7 +48,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2adf2929-a438-4315-b07a-8cd4579ee74e\">\n",
+              "  <div id=\"df-13e540fe-5b18-47ca-8440-e60a90b06e95\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -161,7 +161,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2adf2929-a438-4315-b07a-8cd4579ee74e')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-13e540fe-5b18-47ca-8440-e60a90b06e95')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -212,12 +212,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2adf2929-a438-4315-b07a-8cd4579ee74e button.colab-df-convert');\n",
+              "          document.querySelector('#df-13e540fe-5b18-47ca-8440-e60a90b06e95 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2adf2929-a438-4315-b07a-8cd4579ee74e');\n",
+              "          const element = document.querySelector('#df-13e540fe-5b18-47ca-8440-e60a90b06e95');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -240,7 +240,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 1
         }
       ],
       "source": [
@@ -261,14 +261,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 250
+          "height": 206
         },
         "id": "dB_ZR8L7doGA",
-        "outputId": "f68a05bc-313e-48ae-832d-573befdce9ad"
+        "outputId": "9b3d4ace-7c17-4ca4-9777-8df9d73eb3c7"
       },
       "outputs": [
         {
@@ -298,7 +298,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e66cf200-bac7-4165-abe5-2e507b61f57b\">\n",
+              "  <div id=\"df-35f0665c-db5f-4f5d-8a0e-ef944b28c974\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -399,7 +399,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e66cf200-bac7-4165-abe5-2e507b61f57b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-35f0665c-db5f-4f5d-8a0e-ef944b28c974')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -450,12 +450,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e66cf200-bac7-4165-abe5-2e507b61f57b button.colab-df-convert');\n",
+              "          document.querySelector('#df-35f0665c-db5f-4f5d-8a0e-ef944b28c974 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e66cf200-bac7-4165-abe5-2e507b61f57b');\n",
+              "          const element = document.querySelector('#df-35f0665c-db5f-4f5d-8a0e-ef944b28c974');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -478,7 +478,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 2
         }
       ],
       "source": [
@@ -490,13 +490,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bf1uFxlGdoGA",
-        "outputId": "02d5224e-2d66-4a96-ba4f-1c8cee545294"
+        "outputId": "73e46095-7f8c-405f-ee9a-5ca53151efa6"
       },
       "outputs": [
         {
@@ -517,7 +517,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 3
         }
       ],
       "source": [
@@ -528,13 +528,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "K5_8wU5DdoGB",
-        "outputId": "6c8da43e-9b80-44bf-9fd8-e770474f9141"
+        "outputId": "c4272f3a-103f-4cdb-ebd7-f112626bcefb"
       },
       "outputs": [
         {
@@ -562,7 +562,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 4
         }
       ],
       "source": [
@@ -573,13 +573,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hSNFAEKldoGB",
-        "outputId": "e3c244ba-c5c7-438c-b083-bb6f69f25a8c"
+        "outputId": "f47def07-9b4f-424e-b79c-cc03d041b9d5"
       },
       "outputs": [
         {
@@ -599,7 +599,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 5
         }
       ],
       "source": [
@@ -617,13 +617,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QPuzsH1KdoGB",
-        "outputId": "82bde5e4-ad68-4e78-df89-271ec27b83cf"
+        "outputId": "0deb65e4-ea5e-4f58-dbe5-0c3369655ebb"
       },
       "outputs": [
         {
@@ -645,7 +645,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 6
         }
       ],
       "source": [
@@ -656,13 +656,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "J4gmUdpcdoGB",
-        "outputId": "aa7383b4-a5dd-4a76-e0a5-500d06af3dfc"
+        "outputId": "8b60956c-9315-4d6d-edb3-b6e0f71b2580"
       },
       "outputs": [
         {
@@ -718,7 +718,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 7
         }
       ],
       "source": [
@@ -729,13 +729,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BHwdpxl4doGB",
-        "outputId": "2837c0c6-c6db-4ed6-f69f-3d936322afbc"
+        "outputId": "58ed3582-6ad5-41a6-de07-19fceb3d1fca"
       },
       "outputs": [
         {
@@ -752,7 +752,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 8
         }
       ],
       "source": [
@@ -771,14 +771,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
         },
         "id": "QqEuWRo4doGC",
-        "outputId": "f51d4187-e724-4982-e688-cd146c3f65de"
+        "outputId": "825484cd-c8f9-471f-95cf-bc3cb9b71177"
       },
       "outputs": [
         {
@@ -838,7 +838,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e1e72291-a55b-4e04-9e56-285e43cd7595\">\n",
+              "  <div id=\"df-61afdd5b-2068-4a08-a17c-a22444be4ccf\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1006,7 +1006,7 @@
               "</table>\n",
               "<p>5 rows × 44 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e1e72291-a55b-4e04-9e56-285e43cd7595')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-61afdd5b-2068-4a08-a17c-a22444be4ccf')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1057,12 +1057,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e1e72291-a55b-4e04-9e56-285e43cd7595 button.colab-df-convert');\n",
+              "          document.querySelector('#df-61afdd5b-2068-4a08-a17c-a22444be4ccf button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e1e72291-a55b-4e04-9e56-285e43cd7595');\n",
+              "          const element = document.querySelector('#df-61afdd5b-2068-4a08-a17c-a22444be4ccf');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1085,7 +1085,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 9
         }
       ],
       "source": [
@@ -1097,20 +1097,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6ztMOYS6doGC",
-        "outputId": "5dad1c9c-b5f6-463a-95ba-254d8691c943"
+        "outputId": "9e916d90-fe0f-472f-817d-dbf1eedf9181"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-31-fd4f22170027>:3: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+            "<ipython-input-10-fd4f22170027>:3: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
             "  X = clean_application_df.drop([\"IS_SUCCESSFUL\"],1).values\n"
           ]
         }
@@ -1126,7 +1126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 11,
       "metadata": {
         "id": "DCVgKnTddoGC"
       },
@@ -1154,28 +1154,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TDsiOd4XdoGC",
-        "outputId": "fee412d5-b199-4967-d331-72625a03bff8"
+        "outputId": "fd09d761-b88e-4267-cc9a-facd5d6b08cb"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model: \"sequential_1\"\n",
+            "Model: \"sequential\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " dense_3 (Dense)             (None, 40)                1760      \n",
+            " dense (Dense)               (None, 40)                1760      \n",
             "                                                                 \n",
-            " dense_4 (Dense)             (None, 30)                1230      \n",
+            " dense_1 (Dense)             (None, 30)                1230      \n",
             "                                                                 \n",
-            " dense_5 (Dense)             (None, 1)                 31        \n",
+            " dense_2 (Dense)             (None, 1)                 31        \n",
             "                                                                 \n",
             "=================================================================\n",
             "Total params: 3,021\n",
@@ -1212,25 +1212,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 13,
       "metadata": {
         "id": "-7Glorn6doGC"
       },
       "outputs": [],
       "source": [
         "# Compile the model\n",
-        "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=\"accuracy\")"
+        "nn.compile(loss=\"mean_squared_error\", optimizer=\"sgd\", metrics=\"categorical_accuracy\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "F-i5bJ9odoGC",
-        "outputId": "8936e5bf-f8f7-4e89-dbf1-022ee307eab7"
+        "outputId": "1fbee1c8-a926-4eaa-b101-5cb9edb3bee1"
       },
       "outputs": [
         {
@@ -1238,27 +1238,27 @@
           "name": "stdout",
           "text": [
             "Epoch 1/11\n",
-            "804/804 [==============================] - 3s 2ms/step - loss: 0.5732 - accuracy: 0.7179\n",
+            "804/804 [==============================] - 8s 7ms/step - loss: 0.2212 - categorical_accuracy: 1.0000\n",
             "Epoch 2/11\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5560 - accuracy: 0.7285\n",
+            "804/804 [==============================] - 3s 4ms/step - loss: 0.1998 - categorical_accuracy: 1.0000\n",
             "Epoch 3/11\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5525 - accuracy: 0.7299\n",
+            "804/804 [==============================] - 3s 4ms/step - loss: 0.1946 - categorical_accuracy: 1.0000\n",
             "Epoch 4/11\n",
-            "804/804 [==============================] - 4s 5ms/step - loss: 0.5514 - accuracy: 0.7318\n",
+            "804/804 [==============================] - 2s 3ms/step - loss: 0.1924 - categorical_accuracy: 1.0000\n",
             "Epoch 5/11\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5501 - accuracy: 0.7317\n",
+            "804/804 [==============================] - 3s 4ms/step - loss: 0.1910 - categorical_accuracy: 1.0000\n",
             "Epoch 6/11\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5494 - accuracy: 0.7330\n",
+            "804/804 [==============================] - 4s 5ms/step - loss: 0.1899 - categorical_accuracy: 1.0000\n",
             "Epoch 7/11\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5487 - accuracy: 0.7323\n",
+            "804/804 [==============================] - 3s 4ms/step - loss: 0.1891 - categorical_accuracy: 1.0000\n",
             "Epoch 8/11\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5479 - accuracy: 0.7327\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.1884 - categorical_accuracy: 1.0000\n",
             "Epoch 9/11\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5471 - accuracy: 0.7322\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.1878 - categorical_accuracy: 1.0000\n",
             "Epoch 10/11\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5471 - accuracy: 0.7341\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.1873 - categorical_accuracy: 1.0000\n",
             "Epoch 11/11\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5466 - accuracy: 0.7325\n"
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.1870 - categorical_accuracy: 1.0000\n"
           ]
         }
       ],
@@ -1269,21 +1269,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zph_2xcKdoGC",
-        "outputId": "4088ec14-968d-40cc-c941-8472db0af4a5"
+        "outputId": "2a7be875-d57a-490d-dece-b01df5e7858d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "268/268 - 1s - loss: 0.5532 - accuracy: 0.7277 - 1s/epoch - 5ms/step\n",
-            "Loss: 0.5531599521636963, Accuracy: 0.7276967763900757\n"
+            "268/268 - 1s - loss: 0.1898 - categorical_accuracy: 1.0000 - 519ms/epoch - 2ms/step\n",
+            "Loss: 0.18979790806770325, Accuracy: 1.0\n"
           ]
         }
       ],
@@ -1295,14 +1295,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 16,
       "metadata": {
         "id": "pX792YCadoGD"
       },
       "outputs": [],
       "source": [
         "# Export our model to HDF5 file\n",
-        "nn.save(\"AlphabetSoupCharity.h5\")"
+        "nn.save(\"AlphabetSoupCharityOptimization Method 4.h5\")"
       ]
     }
   ],
